# tfhe

./: .gitignore  BENCHMARKS.md  Dockerfile  LICENSE  LLM.md  OPTIMIZATION.md  README.md  adversarial_test.go  bench_comparison_test.go  bench_openfhe_compat_test.go  bench_optimization_test.go  bench_test.go  benchmark_lattice.txt  benchmark_results.txt  bitwise_integers.go  bitwise_test.go  compose.yml  decryptor.go  encryptor.go  evaluator.go  fhe.go  fhe_test.go  fuzz_test.go  go.mod  go.sum  integer_ops.go  integer_test.go  integers.go  lazy_carry.go  lazy_carry_test.go  ntt_simd.go  ntt_test.go  profile.go  random.go  security.go  serialization.go  shortint.go  tfhe.go  tfhe_test.go  threshold_rng.go  (+1 more)
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
cgo/: fhe.go  fhe_test.go  luxfhe.go  luxfhe_bench_test.go  luxfhe_bridge.cpp  luxfhe_bridge.h  openfhe.go  openfhe_test.go  tfhe_bridge.cpp  tfhe_bridge.h
cgo/radix/: encrypted_compare.cpp  encrypted_compare.h
cmd/fhe-gateway/: main.go
cmd/fhe-server/: main.go
cmd/fhe-worker/: main.go
cmd/profile/: main.go
docs/: next.config.mjs  package.json
docs/app/: layout.tsx  page.tsx
docs/components/: logo.tsx
docs/lib/: source.ts
gpu/: blind_rotate.go  bsk_cache.go  bsk_cache_stub.go  engine.go  engine_stub.go  external_product.go  mlx_ops.go  multigpu.go  multigpu_stub.go  ntt.go  ntt_test.go  scheduler.go  scheduler_stub.go
internal/queue/: queue.go
internal/storage/: storage.go
sdk/: README.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
server/: server  server.go
(+23 files in other folders)
